# wasme

./: .gitattributes  CNAME  Cargo.toml  Makefile.toml  README.md  index.html
.github/: dependabot.yml
.github/workflows/: build-and-deploy.yaml  build-and-package.yaml
assets/: normalize.css  publickey.txt  style.css
pkg/: package.js  package_bg.wasm
src/: lib.rs  main.rs
